# chipwhisperer-pi

./: Cargo.toml  README.md  build.rs
jupyter/: Automated.ipynb  Manual.ipynb  README.md
src/: lib.rs  simpleserial-aes.rs  simpleserial-glitch.rs  simpleserial.rs  trigger.rs
src/c/: glitch.c
src/simpleserial/: v1_1.rs  v2_1.rs
